Filter sheets now don't load categories each time they are opened.

--- a/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
+++ b/src/app/components/transaction-filter-sheet/transaction-filter-sheet.component.html
@@ -87,7 +87,7 @@
         <mat-label>Category</mat-label>
         <mat-select formControlName="category">
           <mat-option>-</mat-option>
-          <mat-option *ngFor="let name of categories" [value]="name">
+          <mat-option *ngFor="let name of getCategories()" [value]="name">
             {{ name }}
           </mat-option>
         </mat-select>
