--- a/src/app/components/pie-chart/pie-chart.component.html
+++ b/src/app/components/pie-chart/pie-chart.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card id="card">
   <mat-card-title class="header">
     <p class="title">{{ name }}</p>
     <mat-spinner diameter="20" color="primary" *ngIf="isLoading"></mat-spinner>
