Artificial delay removed. Bug fixes.

--- a/src/app/components/dc-pie-filter-sheet/dc-pie-filter-sheet.component.html
+++ b/src/app/components/dc-pie-filter-sheet/dc-pie-filter-sheet.component.html
@@ -46,10 +46,8 @@
   </form>
 </mat-grid-list>
 <div align="end">
-  <button mat-raised-button color="primary" (click)="processQuery()" [disabled]="isLoading">
-    Apply
-  </button>
+  <button mat-raised-button color="primary" (click)="processQuery()">Apply</button>
   &nbsp;
-  <button mat-raised-button (click)="clearQuery()" [disabled]="isLoading">Clear</button>
+  <button mat-raised-button (click)="clearQuery()">Clear</button>
 </div>
 &nbsp;
