--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<div class="title">
+  <img src="assets/illus/charts.svg" alt="title" class="img" />
+  <!-- <div class="content">
+    LedgerKeep <br />
+    Visualize Your Expenses.
+  </div> -->
+</div>
+<!-- <mat-card>Add-Edit in Table</mat-card>
+<mat-card>Run customized statistics</mat-card> -->
+
+<mat-toolbar class="footer">&#169; 2020 LedgerKeep Inc. All Rights Reserved.</mat-toolbar>
