--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,9 @@
 <div class="title">
   <img src="assets/illus/charts.svg" alt="title" class="img" />
-  <!-- <div class="content">
-    LedgerKeep <br />
-    Visualize Your Expenses.
-  </div> -->
 </div>
-<!-- <mat-card>Add-Edit in Table</mat-card>
-<mat-card>Run customized statistics</mat-card> -->
+<mat-card class="body">
+  <mat-card-title> LedgerKeep </mat-card-title>
+  <mat-card-content> Visualize Your Expenses. </mat-card-content>
+</mat-card>
 
 <mat-toolbar class="footer">&#169; 2020 LedgerKeep Inc. All Rights Reserved.</mat-toolbar>
