Working on Navbar.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,11 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.thin-font {
+  font-weight: lighter;
+}
+
+.large-font {
+  font-size: large;
+}
