--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,4 +7,29 @@
   <a mat-button class="thin-font large-font title" routerLink="/landing">
     <span>LedgerKeep</span>
   </a>
+  <span class="spacer"></span>
+
+  <button mat-flat-button color="accent" routerLink="/signup">Sign Up</button>
+
+  <div fxShow="true" fxHide.lt-sm="true">
+    <a mat-button routerLink="/login" class="thin-font">Login</a>
+    <a mat-button routerLink="/about" class="thin-font">About</a>
+  </div>
+
+  <div fxShow="true" fxHide.gt-xs="true">
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item routerLink="/login">
+        <mat-icon>login</mat-icon>
+        <span>Login</span>
+      </button>
+      <button mat-menu-item routerLink="/about">
+        <mat-icon>info</mat-icon>
+        <span>About Us</span>
+      </button>
+    </mat-menu>
+  </div>
 </mat-toolbar>
