--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <img class="logo" src="assets/icons/192.png" alt="logo" />
-  <a mat-button class="thin-font large-font title" routerLink="/landing">
+  <a mat-button class="thin-font title" routerLink="/landing">
     <span>LedgerKeep</span>
   </a>
   <span class="spacer"></span>
