--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,10 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.thin-font {
-  font-weight: lighter;
+.w-100 {
+  width: 100%;
 }
 
-.large-font {
-  font-size: large;
+.thin-font {
+  font-weight: lighter;
 }
