RaiseOnLoad directive added.

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
   <div fxFlex="400px" fxFlex.md="400px" fxFlex.sm="400px" fxFlex.xs="98">
     <!-- login-card -->
-    <mat-card class="mat-elevation-z3 card-padding">
+    <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Login</mat-card-title>
       <mat-card-content>
         <form>
