--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Login</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="loginForm">
+        <form [formGroup]="loginForm" (submit)="loginBtnAction()">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email" autocomplete="off" />
