--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -62,6 +62,7 @@
         </form>
       </mat-card-content>
     </mat-card>
+    <a mat-button href="/forgot-password" class="forgot-link">Forgot your password? Reset here.</a>
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
 </div>
