--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -10,3 +10,10 @@
   margin-bottom: 40px !important;
   font-size: xx-large;
 }
+
+.forgot-link {
+  width: 100%;
+  margin-top: 20px;
+  font-size: small;
+  font-weight: normal;
+}
