--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -62,7 +62,7 @@
         </form>
       </mat-card-content>
     </mat-card>
-    <a mat-button href="/forgot-password" color="primary" class="forgot-link"
+    <a mat-button routerLink="/forgot-password" color="primary" class="forgot-link"
       >Forgot your password? Reset here.</a
     >
   </div>
