Forgot password form validations added.

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -4,11 +4,22 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Forgot Password</mat-card-title>
       <mat-card-content>
-        <form>
+        <form [formGroup]="fpForm">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
-            <input matInput autocomplete="off" />
+            <input matInput formControlName="email" autocomplete="off" />
             <mat-hint>We'll send the reset instructions to this mail.</mat-hint>
+            <mat-error *ngIf="fpForm?.get('email')?.hasError('required')">
+              Email is required.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !fpForm?.get('email')?.hasError('required') &&
+                fpForm?.get('email')?.hasError('pattern')
+              "
+            >
+              Email is invalid.
+            </mat-error>
           </mat-form-field>
           <div align="end">
             <app-loading-button btnText="OK"></app-loading-button>
