Forgot password complete.

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -4,7 +4,7 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Forgot Password</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="fpForm">
+        <form [formGroup]="fpForm" (submit)="onBtnClick()">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
             <input matInput formControlName="email" autocomplete="off" />
@@ -22,7 +22,11 @@
             </mat-error>
           </mat-form-field>
           <div align="end">
-            <app-loading-button btnText="OK"></app-loading-button>
+            <app-loading-button
+              btnText="OK"
+              (click)="onBtnClick()"
+              [loading]="isLoading"
+            ></app-loading-button>
           </div>
         </form>
       </mat-card-content>
