--- a/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
+++ b/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
@@ -1,1 +1,25 @@
-<p>forgot-password-reset works!</p>
+<div fxFlex fxLayout="row" fxLayoutAlign="center center">
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
+  <div fxFlex="400px" fxFlex.md="400px" fxFlex.sm="400px" fxFlex.xs="98">
+    <mat-card class="card-padding" appRaiseOnLoad>
+      <mat-card-title class="thin-font title">Password Reset</mat-card-title>
+      <mat-card-content>
+        <form>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>New Password</mat-label>
+            <input matInput type="password" />
+          </mat-form-field>
+
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Confirm Password</mat-label>
+            <input matInput type="password" />
+          </mat-form-field>
+          <div align="end">
+            <app-loading-button btnText="OK"></app-loading-button>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="1"></div>
+</div>
