Forgot password reset form validations done.

--- a/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
+++ b/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
@@ -4,15 +4,38 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Password Reset</mat-card-title>
       <mat-card-content>
-        <form>
+        <form [formGroup]="prForm">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>New Password</mat-label>
-            <input matInput type="password" />
+            <input matInput type="password" formControlName="newPassword" />
+            <mat-error *ngIf="prForm?.get('newPassword')?.hasError('required')">
+              New Password is required.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !prForm?.get('newPassword')?.hasError('required') &&
+                prForm?.get('newPassword')?.hasError('minlength')
+              "
+            >
+              New Password is too short.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !prForm?.get('newPassword')?.hasError('required') &&
+                !prForm?.get('newPassword')?.hasError('minlength') &&
+                prForm?.get('newPassword')?.hasError('pattern')
+              "
+            >
+              New Password should not contain whitespaces.
+            </mat-error>
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Confirm Password</mat-label>
-            <input matInput type="password" />
+            <input matInput type="password" formControlName="confirmPassword" />
+            <mat-error *ngIf="prForm?.get('confirmPassword')?.hasError('unmatch')">
+              Passwords don't match.
+            </mat-error>
           </mat-form-field>
           <div align="end">
             <app-loading-button btnText="OK"></app-loading-button>
