Forgot password reset logic complete.

--- a/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
+++ b/src/app/pages/forgot-password-reset/forgot-password-reset.component.html
@@ -4,7 +4,7 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Password Reset</mat-card-title>
       <mat-card-content>
-        <form [formGroup]="prForm">
+        <form [formGroup]="prForm" (submit)="onBtnAction()">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>New Password</mat-label>
             <input matInput type="password" formControlName="newPassword" />
@@ -38,7 +38,11 @@
             </mat-error>
           </mat-form-field>
           <div align="end">
-            <app-loading-button btnText="OK"></app-loading-button>
+            <app-loading-button
+              btnText="OK"
+              (click)="onBtnAction()"
+              [loading]="isLoading"
+            ></app-loading-button>
           </div>
         </form>
       </mat-card-content>
