Signup form UI elements added. Navabar is now sticky and Raised cards now don't appear above navbar.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="nb-height nb-padding mat-elevation-z6">
+<mat-toolbar color="primary" class="nb-sticky nb-height nb-padding mat-elevation-z6">
   <button mat-icon-button color="accent" *ngIf="auth.isLoggedIn()">
     <mat-icon>menu</mat-icon>
   </button>
