--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -4,33 +4,89 @@
     <mat-card class="card-padding" appRaiseOnLoad>
       <mat-card-title class="thin-font title">Sign Up</mat-card-title>
       <mat-card-content>
-        <form>
+        <form [formGroup]="signupForm">
           <div fxLayout="row wrap" fxLayoutGap="grid">
             <div fxFlex="49%" fxFlex.xs="100%">
               <mat-form-field appearance="outline" class="w-100">
                 <mat-label>First Name</mat-label>
-                <input matInput autocomplete="off" />
+                <input matInput formControlName="firstName" autocomplete="off" />
+                <mat-error *ngIf="signupForm?.get('firstName').hasError('required')">
+                  First Name is required.
+                </mat-error>
+                <mat-error
+                  *ngIf="
+                    !signupForm?.get('firstName').hasError('required') &&
+                    signupForm?.get('firstName').hasError('pattern')
+                  "
+                >
+                  Use alphabet or numbers.
+                </mat-error>
               </mat-form-field>
             </div>
             <div fxFlex="2%" fxFlex.xs="0"></div>
             <div fxFlex="49%" fxFlex.xs="100%">
               <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Last Name</mat-label>
-                <input matInput autocomplete="off" />
+                <input matInput formControlName="lastName" autocomplete="off" />
+                <mat-error *ngIf="signupForm?.get('lastName').hasError('required')">
+                  Last Name is required.
+                </mat-error>
+                <mat-error
+                  *ngIf="
+                    !signupForm?.get('lastName').hasError('required') &&
+                    signupForm?.get('lastName').hasError('pattern')
+                  "
+                >
+                  Use alphabet or numbers.
+                </mat-error>
               </mat-form-field>
             </div>
           </div>
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Email</mat-label>
-            <input matInput autocomplete="off" />
+            <input matInput formControlName="email" autocomplete="off" />
+            <mat-error *ngIf="signupForm?.get('email').hasError('required')">
+              Email is required.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !signupForm?.get('email').hasError('required') &&
+                signupForm?.get('email').hasError('pattern')
+              "
+            >
+              Email is invalid.
+            </mat-error>
           </mat-form-field>
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Password</mat-label>
-            <input matInput type="password" autocomplete="off" />
+            <input matInput type="password" formControlName="password" autocomplete="off" />
+            <mat-error *ngIf="signupForm?.get('password').hasError('required')">
+              Password is required.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !signupForm?.get('password').hasError('required') &&
+                signupForm?.get('password').hasError('minlength')
+              "
+            >
+              Password too short.
+            </mat-error>
+            <mat-error
+              *ngIf="
+                !signupForm?.get('password').hasError('required') &&
+                !signupForm?.get('password').hasError('minlength') &&
+                signupForm?.get('password').hasError('pattern')
+              "
+            >
+              Password should not contain whitespaces.
+            </mat-error>
           </mat-form-field>
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Confirm Password</mat-label>
-            <input matInput type="password" autocomplete="off" />
+            <input matInput type="password" formControlName="confirmPassword" autocomplete="off" />
+            <mat-error *ngIf="signupForm?.get('confirmPassword').hasError('unmatch')">
+              Passwords don't match.
+            </mat-error>
           </mat-form-field>
           <div align="end">
             <app-loading-button btnText="OK"></app-loading-button>
