--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div fxFlex fxLayout="row" fxLayoutAlign="center center">
+<div fxFlex fxLayout="row" fxLayoutAlign="center">
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
   <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100">
     <div class="top-image">
