Tabs added in profile page.

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -6,6 +6,10 @@
       <div class="name thin-font">{{ user?.firstName }} {{ user?.lastName }}</div>
       <mat-spinner diameter="20" color="accent" *ngIf="isLoading"></mat-spinner>
     </div>
+    <mat-tab-group mat-align-tabs="center" animationDuration="200ms">
+      <mat-tab label="Info">Content 1</mat-tab>
+      <mat-tab label="Edit">Content 2</mat-tab>
+    </mat-tab-group>
   </div>
   <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
 </div>
