--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -7,7 +7,19 @@
       <mat-spinner diameter="20" color="accent" *ngIf="isLoading"></mat-spinner>
     </div>
     <mat-tab-group mat-align-tabs="center" animationDuration="200ms">
-      <mat-tab label="Info">Content 1</mat-tab>
+      <mat-tab label="Info">
+        <app-profile-info-row
+          iconName="email"
+          heading="Email"
+          [value]="user?.email"
+        ></app-profile-info-row>
+        <mat-divider></mat-divider>
+        <app-profile-info-row
+          iconName="history"
+          heading="Joined"
+          [value]="user?.createdAt | date"
+        ></app-profile-info-row>
+      </mat-tab>
       <mat-tab label="Edit">Content 2</mat-tab>
     </mat-tab-group>
   </div>
