--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -26,19 +26,39 @@
             <mat-expansion-panel-header>
               <mat-panel-title> Change General Info </mat-panel-title>
             </mat-expansion-panel-header>
-            <form>
+            <form [formGroup]="generalUpdateForm">
               <div fxLayout="row wrap" fxLayoutGap="grid">
                 <div fxFlex="49%" fxFlex.xs="100%">
                   <mat-form-field appearance="outline" class="w-100">
                     <mat-label>First Name</mat-label>
-                    <input matInput autocomplete="off" />
+                    <input matInput formControlName="firstName" autocomplete="off" />
+                    <mat-error *ngIf="generalUpdateForm?.get('firstName')?.hasError('required')"
+                      >First Name is required.</mat-error
+                    >
+                    <mat-error
+                      *ngIf="
+                        !generalUpdateForm?.get('firstName')?.hasError('required') &&
+                        generalUpdateForm?.get('firstName')?.hasError('pattern')
+                      "
+                      >Use alphabet or numbers.</mat-error
+                    >
                   </mat-form-field>
                 </div>
                 <div fxFlex="2%" fxFlex.xs="0"></div>
                 <div fxFlex="49%" fxFlex.xs="100%">
                   <mat-form-field appearance="outline" class="w-100">
                     <mat-label>Last Name</mat-label>
-                    <input matInput autocomplete="off" />
+                    <input matInput formControlName="lastName" autocomplete="off" />
+                    <mat-error *ngIf="generalUpdateForm?.get('lastName')?.hasError('required')"
+                      >Last Name is required.</mat-error
+                    >
+                    <mat-error
+                      *ngIf="
+                        !generalUpdateForm?.get('lastName')?.hasError('required') &&
+                        generalUpdateForm?.get('lastName')?.hasError('pattern')
+                      "
+                      >Use alphabet or numbers.</mat-error
+                    >
                   </mat-form-field>
                 </div>
               </div>
