Balance row added in Profile.

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -19,6 +19,13 @@
           heading="Joined"
           [value]="user?.createdAt | date"
         ></app-profile-info-row>
+        <mat-divider></mat-divider>
+        <app-profile-info-row
+          iconName="account_balance"
+          heading="Balance"
+          [value]="balance > 0 ? '+' + balance : balance"
+          [valueColor]="balance > 0 ? 'green' : 'red'"
+        ></app-profile-info-row>
       </mat-tab>
       <mat-tab label="Edit" [disabled]="isMasterLoading">
         <mat-accordion>
