--- a/src/app/components/sidenav-content/sidenav-content.component.html
+++ b/src/app/components/sidenav-content/sidenav-content.component.html
@@ -1,1 +1,6 @@
-<p>sidenav-content works!</p>
+<mat-action-list>
+  <button mat-list-item *ngFor="let item of items" [routerLink]="[item.link]">
+    <mat-icon mat-list-icon>{{ item.icon }}</mat-icon>
+    {{ item.name }}
+  </button>
+</mat-action-list>
