--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -1,5 +1,26 @@
-<div fxFlex fxLayout="row" fxLayoutAlign="center">
-  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
-  <div fxFlex="700px" fxFlex.md="600px" fxFlex.sm="500px" fxFlex.xs="100">statistics</div>
-  <div fxFlex="0" fxFlex.md="0" fxFlex.sm="0" fxFlex.xs="0"></div>
+<div fxFlex fxLayout="column" fxLayoutGap="10px">
+  <div fxFlex="50" fxFlex.xs="66" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
+    <div fxFlex="50">
+      <app-chart-card
+        #debitPieChart
+        titleIcon="pie_chart"
+        title="Debit Pie Chart"
+        subtitle="Shows your category-wise debits."
+      ></app-chart-card>
+    </div>
+    <div fxFlex="50">
+      <app-chart-card
+        titleIcon="pie_chart"
+        title="Credit Pie Chart"
+        subtitle="Shows your category-wise credits."
+      ></app-chart-card>
+    </div>
+  </div>
+  <div fxFlex="50" fxFlex.xs="34">
+    <app-chart-card
+      titleIcon="leaderboard"
+      title="Expense Line Chart"
+      subtitle="Shows how your balance varied over time."
+    ></app-chart-card>
+  </div>
 </div>
