Working on chart-card component.

--- a/src/app/pages/statistics/statistics.component.html
+++ b/src/app/pages/statistics/statistics.component.html
@@ -10,6 +10,7 @@
     </div>
     <div fxFlex="50">
       <app-chart-card
+        #creditPieChart
         titleIcon="pie_chart"
         title="Credit Pie Chart"
         subtitle="Shows your category-wise credits."
@@ -18,6 +19,7 @@
   </div>
   <div fxFlex="50" fxFlex.xs="34">
     <app-chart-card
+      #expenseLineChart
       titleIcon="leaderboard"
       title="Expense Line Chart"
       subtitle="Shows how your balance varied over time."
