--- a/src/app/components/chart-card/chart-card.component.html
+++ b/src/app/components/chart-card/chart-card.component.html
@@ -4,7 +4,7 @@
     <mat-card-title>{{ title }}</mat-card-title>
     <mat-card-subtitle>{{ subtitle }}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content id="chart-holder"></mat-card-content>
+  <mat-card-content [id]="chartHolderID"></mat-card-content>
   <mat-divider></mat-divider>
   <mat-card-actions align="end">
     <button mat-icon-button><mat-icon>open_in_new</mat-icon></button>
